# pact

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  book.toml  clippy.toml  codecov.yml  deny.toml  justfile  rustfmt.toml  switch-profile.sh
.claude/: CLAUDE.md  INTEGRATION.md  WORKFLOW.md  adversary.md  analyst.md  architect.md  auditor.md  contract-gen.md  implementer.md  integrator.md  settings.json
.claude/commands/: verify.md
.claude/roles/: adversary.md  analyst.md  architect.md  auditor.md  implementer.md  integrator.md
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
config/: minimal.toml  production.toml
config/vcluster-examples/: overlays.toml
crates/hpc-auth/: Cargo.toml
crates/hpc-auth/src/: auth_client.rs  cache.rs  discovery.rs  error.rs  flows.rs  lib.rs  types.rs
crates/pact-acceptance/: Cargo.toml
crates/pact-acceptance/features/: agentic_api.feature  auth_login.feature  auth_logout.feature  auth_token_refresh.feature  boot_config_streaming.feature  boot_sequence.feature  capability_reporting.feature  cli_authentication.feature  cli_commands.feature  commit_window.feature  cross_context.feature  diag_retrieval.feature  drift_detection.feature  emergency_mode.feature  exec_endpoint.feature  federation.feature  hardware_detection.feature  identity_mapping.feature  journal_operations.feature  network_management.feature  node-management-delegation.feature  node_enrollment.feature  observability.feature  overlay_management.feature  partition_resilience.feature  platform_bootstrap.feature  policy_evaluation.feature  process_supervisor.feature  rbac_authorization.feature  resource_isolation.feature  shell_session.feature  workload_integration.feature
crates/pact-acceptance/tests/: acceptance.rs
crates/pact-acceptance/tests/steps/: auth.rs  boot.rs  capability.rs  cli.rs  commit_window.rs  cross_context.rs  diag.rs  drift.rs  emergency.rs  enrollment.rs  federation.rs  helpers.rs  identity_mapping.rs  journal.rs  mcp.rs  mod.rs  network.rs  node_mgmt.rs  observability.rs  overlay.rs  partition.rs  policy.rs  resource_isolation.rs  shell.rs  supervisor.rs  workload_integration.rs
crates/pact-agent/: Cargo.toml
crates/pact-agent/src/: audit.rs  boot.rs  cert_rotation.rs  enrollment.rs  identity.rs  journal_client.rs  lib.rs  main.rs
crates/pact-agent/src/boot/: init.rs  mod.rs  watchdog.rs
crates/pact-agent/src/capability/: cpu.rs  memory.rs  mod.rs  network.rs  storage.rs
crates/pact-agent/src/commit/: mod.rs
crates/pact-agent/src/conflict/: mod.rs
crates/pact-agent/src/drift/: mod.rs
crates/pact-agent/src/emergency/: mod.rs
crates/pact-agent/src/handoff/: mod.rs  mounts.rs
crates/pact-agent/src/identity_cascade/: bootstrap.rs  mod.rs  self_signed.rs  spire.rs
crates/pact-agent/src/isolation/: linux.rs  mod.rs  stub.rs
crates/pact-agent/src/network/: linux.rs  mod.rs  stub.rs
crates/pact-agent/src/observer/: mod.rs
crates/pact-agent/src/shell/: auth.rs  diag.rs  exec.rs  grpc_service.rs  mod.rs  session.rs  whitelist.rs
crates/pact-agent/src/subscription/: mod.rs
crates/pact-agent/src/supervisor/: mod.rs  pact_supervisor.rs  systemd_backend.rs
crates/pact-agent/tests/: drift_pipeline.rs
crates/pact-cli/: Cargo.toml
crates/pact-cli/src/: lib.rs  main.rs
crates/pact-cli/src/commands/: apply.rs  approve.rs  blacklist.rs  commit.rs  config.rs  csm.rs  delegate.rs  diag.rs  diff.rs  emergency.rs  exec.rs  execute.rs  group.rs  lattice.rs  log.rs  mod.rs  node.rs  openchami.rs  promote.rs  rollback.rs  service.rs  status.rs
crates/pact-common/: Cargo.toml  build.rs
crates/pact-common/src/: config.rs  error.rs  lib.rs  node_mgmt.rs  proto.rs  types.rs
crates/pact-e2e/: Cargo.toml
crates/pact-e2e/fixtures/spire/: agent.conf  server.conf
crates/pact-e2e/src/: lib.rs
crates/pact-e2e/src/containers/: dex.rs  keycloak.rs  loki.rs  mod.rs  opa.rs  prometheus.rs  raft_cluster.rs  spire.rs
crates/pact-e2e/tests/: auth_interceptor.rs  auth_oidc.rs  cli_journal_integration.rs  full_cli_e2e.rs  linux_cgroup.rs  linux_namespace.rs  loki_events.rs  opa_policy.rs  partition_degradation.rs  prometheus_metrics.rs  raft_cluster.rs  spire_identity.rs  supervisor_lifecycle.rs
crates/pact-journal/: Cargo.toml
crates/pact-journal/src/: auth.rs  boot_service.rs  ca.rs  enrollment_service.rs  heartbeat.rs  lib.rs  main.rs  policy_service.rs  rate_limiter.rs  service.rs  telemetry.rs
crates/pact-journal/src/raft/: mod.rs  state.rs  types.rs
crates/pact-journal/tests/: single_node.rs
crates/pact-mcp/: Cargo.toml
crates/pact-mcp/src/: connected.rs  lib.rs  main.rs  protocol.rs  tools.rs
crates/pact-nss/: Cargo.toml
crates/pact-nss/src/: lib.rs
crates/pact-policy/: Cargo.toml
crates/pact-policy/src/: lib.rs
crates/pact-policy/src/federation/: mod.rs
crates/pact-policy/src/iam/: mod.rs
crates/pact-policy/src/rbac/: mod.rs
crates/pact-policy/src/rules/: mod.rs  opa.rs
crates/pact-test-harness/: Cargo.toml
crates/pact-test-harness/src/: fixtures.rs  lib.rs  mocks.rs
docs/: README.md  SUMMARY.md
docs/architecture/: agent-design.md  agentic-api.md  cli-design.md  drift-detection.md  emergency-mode.md  failure-modes.md  federation.md  journal-design.md  observability.md  policy-engine.md  security.md  shell-server.md  system-architecture.md  testing-strategy.md
docs/decisions/: ADR-001-separate-raft-quorum.md  ADR-002-blacklist-drift-detection.md  ADR-003-policy-engine.md  ADR-004-emergency-audit-trail.md  ADR-005-no-agent-prometheus.md  ADR-006-pact-as-init.md  ADR-007-no-ssh.md  ADR-008-node-enrollment-certificate-lifecycle.md  ADR-009-overlay-staleness-on-demand-rebuild.md  ADR-010-node-delta-ttl-bounds.md  ADR-011-degraded-mode-policy-evaluation.md  ADR-012-merge-conflict-grace-period.md  ADR-013-two-person-approval-state-machine.md  (+4 more)
docs/usage/: cli-reference.md  (+5 more)
examples/: README.md
scripts/: set-version.sh
specs/: assumptions.md  domain-model.md  failure-modes.md  features  invariants.md  ubiquitous-language.md
(+127 files in other folders)
