[workspace]
resolver = "2"
members = [
    "crates/pact-common",
    "crates/pact-agent",
    "crates/pact-journal",
    "crates/pact-policy",
    "crates/pact-cli",
    "crates/pact-test-harness",
    "crates/pact-mcp",
    "crates/pact-acceptance",
    "crates/pact-e2e",
]

[workspace.package]
version = "2026.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/witlox/pact"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
pact-common = { path = "crates/pact-common", version = "2026.1.0" }
pact-test-harness = { path = "crates/pact-test-harness", version = "2026.1.0" }
pact-journal = { path = "crates/pact-journal", version = "2026.1.0" }
pact-agent = { path = "crates/pact-agent", default-features = false, version = "2026.1.0" }
pact-policy = { path = "crates/pact-policy", default-features = false, version = "2026.1.0" }
pact-cli = { path = "crates/pact-cli", version = "2026.1.0" }
pact-mcp = { path = "crates/pact-mcp", version = "2026.1.0" }
hpc-auth = "2026.1.23"
lattice-client = "2026.1"
hpc-node = "2026.1"
hpc-audit = "2026.1"
hpc-identity = "2026.1"

# SPIFFE/SPIRE
spiffe = { version = "0.12", features = ["x509-source", "tracing"], default-features = false }

# Async runtime
tokio = { version = "1", features = ["full", "process", "signal"] }
tokio-stream = "0.1"

# gRPC / Protobuf
tonic = { version = "0.14", features = ["tls-ring", "channel", "transport"] }
tonic-prost = "0.14"
tonic-build = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"

# Raft consensus
openraft = { version = "0.10.0-alpha.14", features = ["serde"] }
raft-hpc-core = "2026.1.23"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# eBPF
aya = "0.13"
aya-log = "0.2"

# Linux system
nix = { version = "0.31", features = ["inotify", "net", "mount", "socket", "process", "signal", "term", "hostname"] }
libc = "0.2"

# TLS
rustls = "0.23"
rcgen = { version = "0.13", features = ["x509-parser", "pem"] }

# JWT / OIDC
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# Metrics
prometheus = "0.13"

# HTTP (for REST endpoints, OPA, Sovra integration)
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "form"] }
axum = "0.8"
tower = { version = "0.5", features = ["util"] }

# Compression
zstd = "0.13"
flate2 = "1"
tar = "0.4"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# User directories
dirs = "6"

# URL parsing
url = "2"

# Regex
regex = "1"

# Crypto / encoding
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"

# Testing
proptest = "1"
cucumber = "0.22"
tempfile = "3"
tokio-test = "0.4"
testcontainers = "0.27"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow noisy pedantic/nursery lints that don't improve code quality here
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
significant_drop_tightening = "allow"
doc_markdown = "allow"
module_name_repetitions = "allow"
unused_async = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
float_cmp = "allow"
manual_let_else = "allow"
option_if_let_else = "allow"
match_same_arms = "allow"
match_wildcard_for_single_variants = "allow"
implicit_hasher = "allow"
large_enum_variant = "allow"
format_push_string = "allow"
items_after_test_module = "allow"
field_reassign_with_default = "allow"
needless_pass_by_ref_mut = "allow"
used_underscore_binding = "allow"
trivial_regex = "allow"
unnecessary_wraps = "allow"
struct_excessive_bools = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true
