[package]
name = "pact-acceptance"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "BDD acceptance tests for pact"

[dependencies]
pact-common = { workspace = true }
pact-test-harness = { workspace = true }

cucumber = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = "0.3"
tempfile = { workspace = true }

[[test]]
name = "acceptance"
harness = false

[lints]
workspace = true
