[package]
name = "pact-acceptance"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "BDD acceptance tests for pact"

[dependencies]
pact-common = { workspace = true }
pact-test-harness = { workspace = true }
pact-journal = { workspace = true }
pact-agent = { workspace = true }
pact-policy = { workspace = true }
pact-cli = { workspace = true }
pact-mcp = { workspace = true }

cucumber = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = "0.3"
tempfile = { workspace = true }
anyhow = { workspace = true }
jsonwebtoken = { workspace = true }

[features]
default = []
integration = []

[[test]]
name = "acceptance"
harness = false

[lints]
workspace = true
