[package]
name = "pact-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pact-agent"
path = "src/main.rs"

[features]
default = []
ebpf = ["dep:aya", "dep:aya-log"]
spire = ["dep:spiffe"]
systemd = []
nvidia = []
amd = []

[dependencies]
pact-common = { workspace = true }
hpc-node = { workspace = true }
hpc-audit = { workspace = true }
hpc-identity = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
nix = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
prometheus = { workspace = true }
rcgen = { workspace = true }

# Optional: eBPF observers
aya = { workspace = true, optional = true }
aya-log = { workspace = true, optional = true }

# Optional: SPIRE workload identity
spiffe = { workspace = true, optional = true }

[dev-dependencies]
pact-test-harness = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
