[package]
name = "pact-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
pact-agent = { workspace = true }
pact-cli = { workspace = true }
pact-common = { workspace = true }
pact-journal = { workspace = true }
hpc-audit = { workspace = true }
hpc-node = { workspace = true }
pact-mcp = { workspace = true }
pact-policy = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
openraft = { workspace = true }
raft-hpc-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
testcontainers = { workspace = true, features = ["http_wait"] }
tempfile = { workspace = true }

[lints]
workspace = true
