[package]
name = "pact-journal"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pact-journal"
path = "src/main.rs"

[dependencies]
pact-common = { path = "../pact-common" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
openraft = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
zstd = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
prometheus = { workspace = true }

[dev-dependencies]
pact-test-harness = { path = "../pact-test-harness" }
tempfile = { workspace = true }
tokio-test = { workspace = true }

[lints]
workspace = true
