[package]
name = "pact-journal"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pact-journal"
path = "src/main.rs"

[dependencies]
pact-common = { workspace = true }
raft-hpc-core = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
openraft = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
zstd = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
prometheus = { workspace = true }

[dev-dependencies]
pact-test-harness = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }

[lints]
workspace = true
