[package]
name = "pact-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pact-mcp"
path = "src/main.rs"

[dependencies]
pact-common = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }

[lints]
workspace = true
