[package]
name = "pact-nss"
version = "2026.1.0"
edition = "2021"
license = "LGPL-3.0-only"
description = "NSS module for pact identity mapping — resolves OIDC→POSIX UID/GID from local .db files"
publish = false

# Not part of the main workspace — built separately on Linux only.
# Shares no path dependencies with pact crates; reads JSON .db files
# written by pact-agent at /run/pact/{passwd,group}.db.

[lib]
# cdylib produces libnss_pact.so.2 — loaded by glibc NSS
crate-type = ["cdylib"]
name = "nss_pact"

[dependencies]
libnss = "0.9"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
