[package]
name = "pact-policy"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
opa = ["dep:reqwest"]
federation = ["dep:reqwest"]

[dependencies]
pact-common = { path = "../pact-common" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }

# Optional: OPA and Sovra HTTP clients
reqwest = { workspace = true, optional = true }

[dev-dependencies]
pact-test-harness = { path = "../pact-test-harness" }
tempfile = { workspace = true }
tokio-test = { workspace = true }

[lints]
workspace = true
