[package]
name = "pact-test-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
pact-common = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
